--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=joeperry05i2@gmail.com
-EMAIL_PASSWORD=Aq@5gY8Vb
+EMAIL_USER=
+EMAIL_PASSWORD=
 WHATSAPP_API_KEY=your-whatsapp-api-key
 TELEGRAM_BOT_TOKEN=your-telegram-bot-token
 TELEGRAM_CHAT_ID=your-telegram-chat-id
